k8s_yaml_files/ingress-controller-components.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: ingress-nginx-admission
  labels:
    app.kubernetes.io/name: ingress-controller
    app.kubernetes.io/instance: ingress-controller
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    rules:
      - apiGroups:
          - networking.k8s.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    clientConfig:
      service:
        namespace: bluesky-muted-words-plus
        name: ingress-controller-admission
        path: /validate-ingress-nginx-ingress-controller
    failurePolicy: Fail
    sideEffects: None
    admissionReviewVersions:
      - v1
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-controller-admission
  namespace: bluesky-muted-words-plus
  labels:
    app.kubernetes.io/name: ingress-controller
    app.kubernetes.io/instance: ingress-controller
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ingress-controller
    app.kubernetes.io/instance: ingress-controller
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
